XW-5119: fix spacing around figures

--- a/app/styles/component/_article-media-thumbnail.scss
+++ b/app/styles/component/_article-media-thumbnail.scss
@@ -1,14 +1,13 @@
 .article-media-thumbnail {
 	@extend %position-play-icon;
 
-	margin: 40px 0;
 	text-align: center;
 
 	figcaption {
 		@include ellipsis;
 
 		color: #999;
-		height: 60px;
+		max-height: 60px;
 		padding: 5px 0;
 		pointer-events: none;
 		text-align: left;
